# luxlab

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/luxlab/: byte_order.hpp  directory_entry.hpp  exif.hpp  ifd.hpp  rational.hpp  raw_image.hpp  reader.hpp  tag.hpp  tag_data_format.hpp  tag_type.hpp  tiff_header.hpp
source/: luxlab copy.cpp  luxlab.cpp
source/luxlab/: byte_order.cpp  directory_entry.cpp  exif.cpp  ifd.cpp  raw_image.cpp  reader.cpp  tag.cpp  tag_data_format.cpp  tag_type.cpp  tiff_header.cpp
